--- a/normativa/default.html
+++ b/normativa/default.html
@@ -48,11 +48,11 @@
 		Estructuras y de la Ingeniería del Terreno</p>
 		<h3>Normativa Ámbito Estructural</h3>
 		<ul>
-			<li><span class="style_bold">EHE</span><br />
+			<li><span class="style_bold">Código Estructural</span><br />
 			<span class="style_italic">
-			<a href="https://www.mitma.gob.es/organos-colegiados/mas-organos-colegiados/comision-permanente-del-hormigon/cph/instrucciones/ehe-08-version-en-castellano" target="_blank">
-			EHE</a></span><br />
-			Norma del Hormigón Estructural</li>
+			<a href="https://www.mitma.gob.es/organos-colegiados/comision-permanente-de-estructuras-de-acero/cpa/codigo-estructural" target="_blank">
+			Código Estructural</a></span><br />
+			Hormigón, Acero y estructuras mixtas</li>
 
 			<li><span class="style_bold">CTE Seguridad Estructural Acciones en la edificación</span><br />
 			<span class="style_italic">
