--- a/normativa/default.html
+++ b/normativa/default.html
@@ -65,7 +65,7 @@
 		<ul>
 			<li><span class="style_bold">R.O.M 05-05</span><br />
 			<span class="style_italic">
-			<a href="http://www.mediafire.com/?zyjdhy3mmiy" target="_blank">ROM 
+			<a href="https://widispe.puertos.es/rom/storage/public/docROM/ROM%200_5-05.pdf" target="_blank">ROM 
 			05_05 con fe de erratas</a></span><br />
 			Recomedaciones de Obras Marítimas</li>
 			<li><span class="style_bold">CTE Seguridad Estructural Cimentos</span><br />
@@ -79,7 +79,7 @@
 			<li><span class="style_bold">Guía de Cimentaciones de Obras de 
 			Carretera</span><br />
 			<span class="style_italic">
-			<a href="http://www.fomento.es/NR/rdonlyres/63A5CC1B-E7B9-4638-AE45-8BA22A580223/69188/0710401.pdf" target="_blank">
+			<a href="https://www.mitma.es/recursos_mfom/0710401.pdf" target="_blank">
 			G.C.O.C</a></span><br />
 			Documento fundamental para el dimensionamiento de elementos 
 			estructurales en obras de carretera, incluye los aspectos 
