--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
 <div id="container">
 	<!-- Begin Masthead -->
 	<div id="masthead">
-		<h1>Germán López Pineda</h1>
+		
 		<h2>Departamento de Mecánica</h2>
 		<h2>Área de Mecánica de Médios Contínuos y Teoría de Estructuras</h2>
 		<h2>Universidad de Córdoba</h2>
+		<h2> Página personal de Profesor Germán López Pineda</h2>
+
 		<h3>&nbsp;</h3>
 	</div>
 	<!-- End Masthead -->
